# investec-python

./: .editorconfig  .gitignore  README.md  pyproject.toml  shell.nix
.github/workflows/: publish.yml  test.yml
docs/: conf.py  index.md  index.rst  investec-api-setup.md
src/: run.py
src/investec_python/api/: api.py
src/investec_python/api/v1/: accounts.py
tests/: test_dummy.py
tests/investec_python/: test_client.py
