[project]
name = "investec-python"
version = "0.1.0"
description = "A Python wrapper for the Investec Banking API"
authors = [
    {name = "Rameez Khan", email = "rameezkhan.sa@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
